# iCrohn

./: README.md  pyproject.toml
iCrohn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
icrohn/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
icrohn/.github/: ISSUE_TEMPLATE.md
icrohn/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
icrohn/src/icrohn/: __init__.py  cli.py  icrohn.py  main.py  update_path.py
icrohn/tests/: __init__.py  test_icrohn.py
