[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icrohn"
version = "0.1.0"
description = "This is a symptom tracking and display tool."
readme = "README.rst"
authors = [
  {name = "Jeremy Paul Evans", email = "jeremyevans@hey.com"}
]
maintainers = [
  {name = "Jeremy Paul Evans", email = "jeremyevans@hey.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/jeremevans/icrohn/issues"
changelog = "https://github.com/jeremevans/icrohn/blob/master/changelog.md"
homepage = "https://github.com/jeremevans/icrohn"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

